--- a/03. Methods and Functions/some exercises.ipynb
+++ b/03. Methods and Functions/some exercises.ipynb
@@ -141,6 +141,61 @@
     "        return False\n",
     "is_greater(8,6)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_even = []\n",
+    "def myfunc5(*args):\n",
+    "    for num in args:\n",
+    "        if num % 2 == 0:\n",
+    "            list_even.append(num)\n",
+    "    return list_even\n",
+    "myfunc5 (3,4,5,6,7,8,9,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HeLlO WoRlD'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def even_and_odd(a):\n",
+    "    result = ''\n",
+    "    for letter in range(len(a)):\n",
+    "        if letter % 2 == 0:\n",
+    "            result += a[letter].upper()\n",
+    "        else:\n",
+    "            result+=a[letter].lower()\n",
+    "    return result  \n",
+    "even_and_odd('Hello world')"
+   ]
   }
  ],
  "metadata": {
