--- a/03. Methods and Functions/Functions exercises.ipynb
+++ b/03. Methods and Functions/Functions exercises.ipynb
@@ -172,6 +172,110 @@
     "    return result\n",
     "paper_doll('Hello')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BUST'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def blackjack(a,b,c):\n",
+    "    result = a+b+c\n",
+    "    if  result <= 21:\n",
+    "        return result\n",
+    "    elif result >= 21 and 11 in (a,b,c):\n",
+    "        return result - 10\n",
+    "    else :\n",
+    "        return 'BUST'\n",
+    "\n",
+    "blackjack(5,6,7)\n",
+    "blackjack(9,9,9)\n",
+    "#blackjack(9,9,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def spy_game(nums):\n",
+    "    code = [0,0,7,'x']\n",
+    "    # pop or remove the first index from code if num and the first index of code are equal\n",
+    "    # [0,7,'x]\n",
+    "    # [7,'x]\n",
+    "    # ['x] here remaining one in code, so if the length of code equals one(1) this means its time to print True\n",
+    "    for num in nums:\n",
+    "        if num == code[0]:\n",
+    "            code.pop(0)\n",
+    "    return len(code) == 1\n",
+    "spy_game([1,2,4,0,0,7,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_primes(num):\n",
+    "    if num <= 2:\n",
+    "        return 0\n",
+    "    for numbers in range(3,num,2):\n",
+    "        prime_numbers = [2]\n",
+    "        \n",
+    "        if numbers % numbers == 0 and numbers / 1 == numbers:\n",
+    "            return prime_numbers.append(numbers)\n",
+    "    return len(prime_numbers)\n",
+    "\n",
+    "count_primes(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_primes(num):\n",
+    "    primes = [2]\n",
+    "    x = 3\n",
+    "    if num < 2:  # for the case of num = 0 or 1\n",
+    "        return 0\n",
+    "    while x <= num:\n",
+    "        for y in range(3,x,2):  # test all odd factors up to x-1\n",
+    "            if x%y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    print(primes)\n",
+    "    return len(primes)\n",
+    "                "
+   ]
   }
  ],
  "metadata": {
