--- a/04. Object Oriented Programing/04 Special (Magic_Dunder) Methods.ipynb
+++ b/04. Object Oriented Programing/04 Special (Magic_Dunder) Methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "200"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
     "    # 2. so to make the 'print' work i will add a string representation using a method\n",
     "    # 3. Here i am defining a string representation of the class, \n",
     "    def __str__(self) :\n",
-    "        return f'{self.title} by {self.author}'\n",
+    "        return (f'{self.title} by {self.author}')\n",
     "    \n",
     "    # 4. lets add one more \n",
     "    def __len__ (self):\n",
