--- a/04 Milestone Project 1/Hangman game.ipynb
+++ b/04 Milestone Project 1/Hangman game.ipynb
@@ -2,99 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "from Hangman_arts import logo, stages\n",
+    "from Hangman_Words import word_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stages = ['''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "      |\n",
-    "      |\n",
-    "      |\n",
-    "      |\n",
-    "=========\n",
-    "''',\n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    "      |\n",
-    "      |\n",
-    "      |\n",
-    "=========\n",
-    "''',\n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    "  |   |\n",
-    "      |\n",
-    "      |\n",
-    "=========\n",
-    "''', \n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    " /|   |\n",
-    "      |\n",
-    "      |\n",
-    "=========''',\n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    " /|\\  |\n",
-    "      |\n",
-    "      |\n",
-    "=========\n",
-    "''',\n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    " /|\\  |\n",
-    " /    |\n",
-    "      |\n",
-    "=========\n",
-    "''',\n",
-    "'''\n",
-    "  +---+\n",
-    "  |   |\n",
-    "  O   |\n",
-    " /|\\  |\n",
-    " / \\  |\n",
-    "      |\n",
-    "=========\n",
-    "'''     ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " \n",
+      " _                                             \n",
+      "| |                                            \n",
+      "| |__   __ _ _ __   __ _ _ __ ___   __ _ _ __  \n",
+      "| '_ \\ / _` | '_ \\ / _` | '_ ` _ \\ / _` | '_ \\ \n",
+      "| | | | (_| | | | | (_| | | | | | | (_| | | | |\n",
+      "|_| |_|\\__,_|_| |_|\\__, |_| |_| |_|\\__,_|_| |_|\n",
+      "                    __/ |                      \n",
+      "                   |___/    \n",
       "Hint: animal name\n"
      ]
     }
    ],
    "source": [
-    "word_list = ['camel', 'alligator','chimpanzee','leopard']\n",
+    "print (logo)\n",
+    "\n",
+    "#word_list = ['camel', 'alligator','chimpanzee','leopard']\n",
     "selected_word = random.choice(word_list).lower()\n",
     "display = ['_']\n",
     "\n",
@@ -105,96 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_ _ _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "      |\n",
-      "      |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "_ _ _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      "      |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      "      |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      "  |   |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      " /|   |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      " /|\\  |\n",
-      "      |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      " /|\\  |\n",
-      " /    |\n",
-      "      |\n",
-      "=========\n",
-      "\n",
-      "Dead, u Hanged the man\n",
-      "_ e _ _ a _ _\n",
-      "\n",
-      "  +---+\n",
-      "  |   |\n",
-      "  O   |\n",
-      " /|\\  |\n",
-      " / \\  |\n",
-      "      |\n",
-      "=========\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tries = []\n",
     "game_on = True\n",
